--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             --coin-color: #ffd700;
             --path-color: #8b4513;
             --grass-color: #2e8b57;
-            /* Colores para el mapa de pixel art */
+/*mapa pixel*/
             --pixel-grass-dark: #2c5545;
             --pixel-grass-light: #4c8a66;
             --pixel-path-dark: #6b4c30;
@@ -505,7 +505,7 @@
 <body>
     <!-- Menú Principal -->
     <div class="main-menu" id="mainMenu">
-        <h1 class="menu-title floating">Miku Defense</h1>
+        <h1 class="menu-title floating">V Defense</h1>
         <button class="menu-button" id="createRoomBtn">Crear Sala</button>
         <button class="menu-button" id="joinRoomBtn">Unirse a Sala</button>
         <button class="menu-button" id="profileBtn">Mi Perfil</button>
